--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,15 @@ body{
 ul li{
 	list-style: none;
 }
+a{
+	text-decoration: none; 
+}
 .Navigation nav{
 	height:80px;
 	width:100%;
 	background-color: #FF0000;
 }
-.Navigation a{
-	text-decoration: none;
-}
+
 .Navigation .nav-name{
 	padding: 20px;
 	font-size: 40px;
@@ -67,6 +68,7 @@ ul li{
 	margin:0;
 	padding: 0;
 	width: 100%;
+	height:100%;
 }
 div.grid-item{
 	display: inline-block;
@@ -76,8 +78,77 @@ div.grid-item{
 	width:25%;
 }
 figure.effect-sadie {
+	position: relative;
+	text-align: center;
 	margin:0;
 	padding:0;
 	width: 100%;
 }
 
+figure.effect-sadie figcaption::before{
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	/*渐变色*/
+	background: linear-gradient(to bottom,rgba(72,76,97,0) 0%,rgba(72,76,97,0.8) 75%);
+	background: -webkit-linear-gradient(to bottom,rgba(72,76,97,0) 0%,rgba(72,76,97,0.8) 75%);
+	content: "";
+	opacity: 0;
+	transform: translate3d(0,50%,0);
+	-webkit-transform: translate3d(0,50%,0);
+}
+figure.effect-sadie figcaption,
+figure.effect-sadie figcaption>a{
+	position: absolute;
+	top: 0;
+	left:0;
+	width:100%;
+	height: 100%;
+}
+figure.effect-sadie figcaption>a{
+	opacity: 0;
+}
+figure.effect-sadie h2{
+	position:absolute;
+	font-size: 2.5rem;
+	top:40%;
+	left:0;
+	width:100%;
+	color:#FF0000;
+	transition: transform 0.35s,color 0.35s;
+	-webkit-transition: transform 0.35s,color 0.35s;
+	transform: translate3d(0;-50%,0);
+	-webkit-transform: translate3d(0;-50%,0);
+}
+figure.effect-sadie figcaption::before,
+figure.effect-sadie p {
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transition: opacity 0.35s, transform 0.35s;
+}
+ 
+figure.effect-sadie p {
+    position: absolute;
+    color:#FF0000;
+    font-size: 1.2rem;
+    bottom: 50px;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transform: translate3d(0,10px,0);
+    -webkit-transform: translate3d(0,10px,0);
+}
+ 
+figure.effect-sadie:hover h2 {
+    color: #FF0000;
+    transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
+    -webkit-transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
+}
+ 
+figure.effect-sadie:hover figcaption::before ,
+figure.effect-sadie:hover p {
+    opacity: 1;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+}
