--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ ul li{
 a{
 	text-decoration: none; 
 }
+/* nav */
 .Navigation nav{
 	height:80px;
 	width:100%;
@@ -34,6 +35,7 @@ a{
 }
 .Navigation .nav-ul li{
 	display: block;
+	border-radius: 10px;
 	float: left;
 	width:20%;
 	font-size: 25px;
@@ -51,15 +53,23 @@ a{
 .Navigation .selected .nav-link{
 	color: #FF0000;
 }
+
+/* content */
+
 .cd-hero-slider{
 	display:inline-block;
 	margin:0;
 	padding:0;
 	width: 100%;
+	height:auto;
+}
+.cd-hero-slider .active{
+	display:inline-block;
 }
 .cd-hero-slider li{
-	display: inline-block;
+	display: none;
 	width: 100%;
+	height:auto;
 	margin:0;
 	padding: 0;
 }
@@ -68,7 +78,7 @@ a{
 	margin:0;
 	padding: 0;
 	width: 100%;
-	height:100%;
+	height:auto;
 }
 div.grid-item{
 	display: inline-block;
@@ -76,6 +86,7 @@ div.grid-item{
 	margin:0;
 	padding:0;
 	width:25%;
+	height:auto;
 }
 figure.effect-sadie {
 	position: relative;
@@ -83,6 +94,11 @@ figure.effect-sadie {
 	margin:0;
 	padding:0;
 	width: 100%;
+	max-height:327.25px;
+}
+figure.effect-sadie img{
+	max-width: 100%;
+	max-height: 100%;
 }
 
 figure.effect-sadie figcaption::before{
@@ -92,20 +108,20 @@ figure.effect-sadie figcaption::before{
 	width:100%;
 	height:100%;
 	/*渐变色*/
-	background: linear-gradient(to bottom,rgba(72,76,97,0) 0%,rgba(72,76,97,0.8) 75%);
-	background: -webkit-linear-gradient(to bottom,rgba(72,76,97,0) 0%,rgba(72,76,97,0.8) 75%);
+	background: linear-gradient(to bottom,rgba(230,160,190,0) 0%,rgba(230,160,190,0.7) 75%);
+	background: -webkit-linear-gradient(to bottom,rgba(230,160,190,0) 0%,rgba(230,160,190,0.7) 75%);
 	content: "";
 	opacity: 0;
-	transform: translate3d(0,50%,0);
-	-webkit-transform: translate3d(0,50%,0);
+
 }
+
 figure.effect-sadie figcaption,
 figure.effect-sadie figcaption>a{
 	position: absolute;
 	top: 0;
 	left:0;
 	width:100%;
-	height: 100%;
+	height:100%;
 }
 figure.effect-sadie figcaption>a{
 	opacity: 0;
@@ -136,6 +152,7 @@ figure.effect-sadie p {
     left: 0;
     width: 100%;
     opacity: 0;
+    margin: 0;
     transform: translate3d(0,10px,0);
     -webkit-transform: translate3d(0,10px,0);
 }
@@ -151,4 +168,39 @@ figure.effect-sadie:hover p {
     opacity: 1;
     transform: translate3d(0,0,0);
     -webkit-transform: translate3d(0,0,0);
+}
+
+/* footer */
+.tm-footer{
+	left:0;
+	bottom:0;
+	width:100%;
+	height:160px;
+	color:black;
+	background-color: #FF0000;
+	text-align: center;
+}
+.tm-icon-container{
+	margin-bottom: 30px;
+}
+.tm-icon-link{
+	display: inline-block;
+	background-color:#FF0000;
+	color: black;
+	width: 46px;
+	height: 46px;
+	line-height: 46px;
+	text-align: center;
+	margin-top: 10px;
+	margin-right: 10px;
+}
+.tm-icon-link:hover{
+	background-color: black;
+	color: #FF0000;
+}
+.tm-footer .tm-copyright-text{
+	margin: 0;
+	height: 60px;
+	bottom:10px;
+	font-size: 25px;
 }
